# pyspiel_extensions

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pytest.ini  tasks.py
extensions/: bindings.cc
extensions/backward_induction/: backward_induction_pybind11.h
extensions/subtraction_game/: subtraction_game.cc  subtraction_game.h  subtraction_game_pybind11.cc  subtraction_game_pybind11.h
pyspiel-extensions-plug-in/: CMakeLists.txt  pyproject.toml  setup.py.git.patch
pyspiel-extensions-plug-in/src/pyspiel_extensions/plug_in/: __init__.py
pyspiel-extensions-shared-library/: CMakeLists.txt  pyproject.toml
pyspiel-extensions-shared-library/src/pyspiel_extensions/shared_library/: __init__.py  _core.pyi
pyspiel-extensions-shared-library/tests/: test_shared_library.py
shared_library/: CMakeLists.txt  pyproject.toml
shared_library/tests/: test_shared_library.py
